--- a/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
@@ -460,7 +460,7 @@
                 || typeof(option.where) === 'undefined') {
               option.where = getFormData(operate.getQueryForm());
             } else {
-              option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+              option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
             }
             table.render(transferParamsWithSort(option, "csmId"));
           },
@@ -471,7 +471,7 @@
             if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
               option.where = getFormData(operate.getQueryForm());
             } else {
-              option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+              option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
             }
             table.reload(tableId, transferParamsWithSort(option, "csmId"));
           },
