--- a/vc-web/vc-web-front/src/main/resources/public/monitor/map/history.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/map/history.html
@@ -41,12 +41,6 @@
     #routes-container {
       overflow: hidden;
     }
-    .speedBox .speedRange {
-      margin: 0;
-      width: 100px;
-      display: inline-block;
-      vertical-align: middle;
-    }
     .detailInformation {
       width: 360px;
       background-color: #f0f0f0;
@@ -56,7 +50,12 @@
       text-align: center;
     }
     table caption {
-      padding-left: 20px;
+      text-align: center;
+    }
+    .control {
+      position: absolute;
+      bottom: 0;
+      right: 0;
     }
     .carControl {
       width: 50px;
@@ -64,10 +63,7 @@
       border-radius: 5px;
       background-color: rgba(255,255,255,.8);
       box-shadow: 1px 1px 3px 1px #cbcbcb;
-      background-position: center;
-      position: absolute;
-      bottom: 0;
-      right: 0;
+      float: left;
     }
     .carControlPlay {
       background: url('./start.png') no-repeat;
@@ -80,6 +76,18 @@
       background-size: 40px 40px;
       background-position: center;
       background-color:rgba(255,255,255,.8);
+    }
+    .speedBox {
+      width: 310px;
+      height: 50px;
+      line-height: 50px;
+      background-color: rgba(255,255,255,.8);
+      box-shadow: 1px 1px 3px 1px #cbcbcb;
+      float: left;
+    }
+    .speedBox .speedRange {
+      height: 50px;
+      vertical-align: middle;
     }
   </style>
   <link href="/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
@@ -127,10 +135,7 @@
       <div class="detailInformation">
         <table class="table table-striped">
           <caption>
-            <div class="speedBox">
-              <span class="speedTxt"></span>
-              <input class="speedRange" name="speedRange" type="range" min="1000" max="1000000" step="1000" value="1000" />
-            </div>
+            轨迹信息
           </caption>
           <tbody>
             <tr>
@@ -150,8 +155,13 @@
       </div>
     </div>
   </div>
-  <div class="carControl carControlPlay">
+  <div class="control">
+    <div class="carControl carControlPlay"></div>
+    <div class="speedBox">
+      <input class="speedRange" name="speedRange" type="range"  min="0" max="10000" step="10" value="1000" />
+    </div>
   </div>
+
 <script src="/js/jquery.min.js?v=2.1.4"></script>
 <script src="/js/bootstrap.min.js?v=3.3.5"></script>
 <script src="/js/plugins/jquery-ui/jquery-ui.min.js"></script>
@@ -178,10 +188,11 @@
   var map;
   var pathSimplifierIns;
   var status;
-  var navg;
+  var navg,total;
+  var targetIndex = 100;
 
   $('#panel').hide();
-  $('.carControl').hide();
+  $('.control').hide();
 
   $(function () {
 
@@ -288,6 +299,11 @@
         }
       });
 
+      $('.speedRange').on('change',function () {
+        console.log(1);
+        navg.moveByDistance(500);
+      });
+
       //点击查询按钮
       $('#searchButton').on('click', function () {
         if (!checkParams()) {
@@ -304,7 +320,7 @@
             return;
         });
         $('.carControl').addClass('carControlPlay').removeClass('carControlPause');
-        initSpeed();
+        // initSpeed();
         loadData();
         setTimeout(expandPath,5000);
       });
@@ -331,19 +347,6 @@
         params.currentTimeEnd = $endTime.val();
         return true;
       }
-
-      // 加速减速
-      function initSpeed () {
-        function updateSpeedTxt () {
-          var speed = parseInt($('.speedRange').val(),10);
-          $('.speedTxt').html('播放速度:' + speed + 'km/h');
-          $('#loadingTip').remove();
-        }
-        $('.speedRange').on('change', updateSpeedTxt);
-        $('.speedRange').on('change', loadData);
-        updateSpeedTxt();
-        $('#panel').show();
-      }
  
       function loadData() {
         $.getJSON(
@@ -363,7 +366,7 @@
                 layer.msg('没有找到轨迹数据！', {icon: 7, time: 1500});
                 pathSimplifierIns.setData();
                 $('#panel').hide();
-                $('.carControl').hide();
+                $('.control').hide();
               }
                 hasMore = false;
                 return;
@@ -407,7 +410,8 @@
             totalPoint+=pathRoutes.length;
 
             if (totalPoint != 0) {
-                $('.carControl').show();
+                $('.control').show();
+                $('#panel').show();
             }
 
             if (pathRoutes.length === 0) {
@@ -473,6 +477,12 @@
                   });
                   if (status !== "stop") {
                     navg.start();
+
+                    $('.speed').html(currentSpeed);
+                    $('.time').html(currendTime);
+                    $('.mile').html(currendMiles);
+                    $('.soc').html(currendSoc);
+
                     navg.on("move", function(event) {
                       if(event.target.cursor.idx != null && event.target.cursor.idx != undefined) {
                         $('.speed').html(trackData[event.target.cursor.idx][0] + 'km/h');
