调整job,修改列表页,移除不用的module

--- a/vc-web/vc-web-front/src/main/resources/public/auth/user/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/user/index_list2.html
@@ -180,11 +180,10 @@
 	}
 
 	function getTableHeight(){
-		 var height = $(window).height() - ($(".queryForm_wrapper").height()+$(".menubar").height() + 25);
-//		 if(height>1000)return 1000;
-		console.log(height);
-		 return height;
-	}
+      var height = $(window).height() - ($(".queryform").height() + 50);
+      if(height>1000)return 1000;
+      return height;
+  }
 
 	$(window).resize(function(){
 		option["height"] = getTableHeight();
