--- a/vc-web/vc-web-front/src/main/resources/public/monitor/expVehicle/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/expVehicle/index_list2.html
@@ -280,10 +280,9 @@
         grid.render(option);
     }
 
-    function getTableHeight() {
-        var height = $(window).height() - ($(".queryForm_wrapper").height() + $(".menubar").height() + 25);
-//		 if(height>1000)return 1000;
-        console.log(height);
+    function getTableHeight(){
+        var height = $(window).height() - ($(".queryform").height() + 50);
+        if(height>1000)return 1000;
         return height;
     }
 
