--- a/vc-web/vc-web-front/src/main/resources/public/electricity/alarm/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/electricity/alarm/index_list2.html
@@ -10,7 +10,7 @@
                 </button>
 
                 <ul class="dropdown-menu">
-                    <li >
+                    <li sctl="exportData">
                         <a href="javascript:operate.exportData();">数据导出</a>
                     </li>
                 </ul>
